fix: make horizontal scrollbar visible in query panel

--- a/query_panel/style.css
+++ b/query_panel/style.css
@@ -143,3 +143,7 @@ th {
 .flex-column {
   flex-direction: column;
 }
+
+regular-table::-webkit-scrollbar-thumb {
+  border-width: 2px;
+}
